--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,8 @@ readme.txt
 # dotenv environment variables file
 .env
 
+# visual studio config file may contain api keys
+.vscode
+
 # mac os stuff
 .DS_Store
