--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "home": "copyfiles --up 2 './public/home/*' 'public'",
         "build": "rm -R -f public; mkdir public; npm-run-all build:*",
         "build:sass": "sass --no-source-map src/:public/",
-        "build:scripts": "BABEL_ENV=production rollup -c",
         "build:copy": "copyfiles -e './src/_/**' -e './src/**/*.scss' -e './src/**/*.js' --up 1 './src/**/*' 'public'",
+        "build:scripts": "BABEL_ENV=production rollup -c",
         "build:home": "copyfiles --up 2 './public/home/*' 'public'",
         "i18n": "",
         "build-prod": "npm-run-all build-prod:scripts build:*",
@@ -39,6 +39,7 @@
         "npm-run-all": "^4.1.5",
         "roddeh-i18n": "^1.2.0",
         "rollup": "^2.44.0",
+        "rollup-plugin-posthtml": "^1.1.0",
         "rollup-plugin-terser": "^7.0.2",
         "sass": "^1.32.8"
     },
@@ -47,6 +48,7 @@
         "prettier": "^2.2.1",
         "rollup-plugin-copy": "^3.4.0",
         "rollup-plugin-livereload": "^2.0.5",
+        "rollup-plugin-replace-html-vars": "^1.0.3",
         "rollup-plugin-serve": "^1.1.0",
         "transformation-matrix": "^2.11.1"
     }
