--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     },
     "devDependencies": {
         "@kenzap/k-cloud": "^1.0.8",
+        "dom-to-image": "^2.6.0",
         "prettier": "^2.2.1",
         "rollup-plugin-copy": "^3.4.0",
         "rollup-plugin-livereload": "^2.0.5",
